results/SpecGenBench/conversational/log-AddLoop-2023_08_13_01_48_40.txt
public class AddLoop {
    //@ ensures \result == x + y;
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            //@ maintaining 0 <= n && sum == x + y - n;
            //@ decreases n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
            }
        } else {
            int n = -y;
            //@ maintaining 0 <= n && sum == x - n;
            //@ decreases n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
            }
        }
        return sum;
    }
}
/home/max/Documents/JMLGPT/tmp/AddLoop.java:15: verify: The prover cannot establish an assertion (LoopInvariantBeforeLoop) in method AddLoop
            //@ maintaining 0 <= n && sum == x - n;
                ^
1 verification failure

public class AddLoop {
    //@ ensures \result == x + y;
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            //@ maintaining 0 <= n && sum == x + y - n;
            //@ decreases n;
            while (n > 0) {
                //@ maintaining 0 <= n && sum == x + y - n;
                //@ decreases n;
                sum = sum + 1;
                n = n - 1;
            }
        } else {
            int n = -y;
            //@ maintaining 0 <= n && sum == x - n;
            //@ decreases n;
            while (n > 0) {
                //@ maintaining 0 <= n && sum == x - n;
                //@ decreases n;
                sum = sum - 1;
                n = n - 1;
            }
        }
        return sum;
    }
}
/home/max/Documents/JMLGPT/tmp/AddLoop.java:10: error: Loop specifications must immediately precede a loop statement
                //@ maintaining 0 <= n && sum == x + y - n;
                    ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:20: error: Loop specifications must immediately precede a loop statement
                //@ maintaining 0 <= n && sum == x - n;
                    ^
2 errors

